<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="@dimen/large"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexe_info"
        android:layout_marginTop="@dimen/defaut"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/woman"
            android:text="@string/woman"
            android:textAlignment="center"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/next_height"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/man"
            android:text="@string/man"
            android:textAlignment="center"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/next_height"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/other"
            android:text="@string/other"
            android:textAlignment="center"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/next_height" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/sexe_info"
        android:textStyle="bold"
        android:textSize="@dimen/info"
        android:layout_width="@dimen/wide"
        android:layout_height="@dimen/photosize"
        android:text="@string/sexe_profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/cent"
        />

    <CheckBox
        android:id="@+id/check_sexe"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/info"
        android:layout_marginBottom="@dimen/low"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/next"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/wide"
        android:layout_height="@dimen/next_height"
        android:layout_marginBottom="@dimen/defaut"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>