<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="@dimen/large"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taste_info"
        android:layout_marginTop="@dimen/defaut"
        app:singleSelection="true"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/woman"
            android:text="@string/woman"
            android:textAlignment="center"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/next_height"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/man"
            android:text="@string/man"
            android:textAlignment="center"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/next_height" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tout"
            android:text="@string/tout"
            android:textAlignment="center"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/next_height" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/taste_info"
        android:textStyle="bold"
        android:textSize="@dimen/info"
        android:layout_width="@dimen/wide"
        android:layout_height="@dimen/photosize"
        android:text="@string/taste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/cent"/>

    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/wide"
        android:layout_height="@dimen/next_height"
        android:layout_marginBottom="44dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>