<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReglageActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/reg_nav"
        android:layout_width="322dp"
        android:layout_height="53dp"
        app:layout_constraintEnd_toStartOf="@+id/terminer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/reglage_navigation"
        android:paddingStart="@dimen/defaut"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/terminer"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/terminer"
        app:itemTextColor="@color/red"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@+id/reg_nav">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/outils"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reglage"
                    android:layout_marginTop="@dimen/defaut"
                    android:layout_marginBottom="@dimen/defaut"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/phone_number_w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone|number"
                    android:hint="@string/zero"
                    android:background="@android:color/transparent"
                    android:autofillHints="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mini">

                <TextView
                    android:id="@+id/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifier_mdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/change_password_w"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/nouveau_mdp"
                    android:inputType="textPassword"
                    android:textSize="@dimen/hint"
                    android:autofillHints=""
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/mini">

                <TextView
                    android:id="@+id/adresse_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/adresse_mail_w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/une_adresse"
                    android:textColor="@color/red"
                    android:background="@android:color/transparent"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/decouverte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decouverte"
                    android:layout_marginTop="@dimen/defaut"
                    android:layout_marginBottom="@dimen/defaut"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/emplacement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emplacement"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/emplacement_w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/emplacement_actuel"
                    android:background="@android:color/transparent"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tranche_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tranche_age"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/choix_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choix_age"
                    android:textColor="@color/black"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/distance_choisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_choisi"
                    android:textStyle="bold"
                    />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    />

                <SeekBar
                    android:id="@+id/choix_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="50"/>

            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notifications"
                    android:layout_marginTop="@dimen/defaut"
                    android:layout_marginBottom="@dimen/defaut"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/editTextTextPersonName8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:background="@android:color/transparent"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="normal|bold" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dfg"
                android:textStyle="bold"
                />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/confidentialite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confidentialité"
                android:layout_marginTop="@dimen/defaut"
                android:layout_marginBottom="@dimen/defaut"
                android:textStyle="bold"
                android:textColor="@color/black"
                />



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <TextView
                android:id="@+id/paiement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paiements"
                android:layout_marginTop="@dimen/defaut"
                android:layout_marginBottom="@dimen/defaut"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


        </TableLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>